# NewDebateApp

./: README.md
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  models.rs  routes.rs
backend/src/models/: interfaces.rs  mod.rs  requests.rs
frontend/: Dockerfile  bun.lockb  package.json
frontend/components/navigation/: DLCAppShell.tsx  DLCNavBar.tsx  UserIcon.tsx
frontend/lib/: data.ts  dictionaries.ts  interfaces.ts  judge.ts
frontend/lib/components/: CreateEvaluation.tsx  DLCAppShell.tsx  DLCHeader.tsx  DLCNavBar.tsx  InboxView.tsx  UserIcon.tsx
frontend/lib/roots/: EvaluateJudges.tsx  GenerateAwards.tsx  GeneratePairings.tsx  InviteUsers.tsx  JudgeDatabase.tsx  ViewParadigms.tsx  judge.module.css  pair.module.css
frontend/lib/store/reducers/: reduce.ts
frontend/lib/store/slices/: auth.ts  env.ts  tourn.ts
frontend/pages/: 404.tsx  _app.tsx  awards.tsx  evaluate.tsx  index.tsx  judges.tsx  login.tsx  pair.tsx  signup.tsx  users.tsx
frontend/pages/api/: get.ts
frontend/styles/: globals.css
kotlin/: Taskfile.yml  pom.xml
kotlin/src/main/kotlin/cn/nhsdlc/debateapp/: DebateAppApplication.kt
kotlin/src/test/kotlin/cn/nhsdlc/debateapp/: DebateAppApplicationTests.kt
lambda/: csv_lambda_handler.py
