[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
bson = "2.6.1"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mongodb = "2.6.0"
nanoid = "0.4.0"
serde = "1.0.170"
tokio = "1.29.1"
warp = "0.3.5"
